fix: Ensure we can rollback many blocks